@@ -1,0 +1,1 @@
+Fix field name typo in debian/upstream/metadata (Repositoryz => Repository).
